fix tweet generator bug with semicolon, make buttons more visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,11 @@ body {
 }
 
 .btn-outline-primary {
-    opacity: 0.5;
+    opacity: 0.7;
     background-color: black;
-    color: #A8A8A8;
+    color: white;
     margin-top: 5%;
 }
+
+
 
